# cc-pane

./: .claudeignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  INTRO.md  README.md  README.zh-CN.md  components.json  docker-compose.yml  index.html  package-lock.json  package.json  screenshot.html  tsconfig.json  vite.config.ts  vitest.config.ts
cc-panes-api/: Cargo.toml
cc-panes-api/src/: error.rs  lib.rs
cc-panes-api/src/routes/: mod.rs
cc-panes-core/: Cargo.toml
cc-panes-core/examples/: audit_usage_stats.rs
cc-panes-core/src/: constants.rs  lib.rs
cc-panes-core/src/events/: mod.rs
cc-panes-core/src/models/: filesystem.rs  git.rs  history.rs  launch_profile.rs  mod.rs  process_info.rs  project.rs  provider.rs  runner.rs  screenshot.rs  session_restore.rs  settings.rs  shared_mcp.rs  spec.rs  ssh_machine.rs  task_binding.rs  terminal.rs  todo.rs  usage_stats.rs  workspace.rs  workspace_snapshot.rs  wsl.rs
cc-panes-core/src/pty/: job.rs  mod.rs
cc-panes-core/src/repository/: db.rs  history_file_repo.rs  history_repo.rs  mod.rs  project_repo.rs  runner_repo.rs  session_restore_repo.rs  spec_repo.rs  task_binding_repo.rs  todo_repo.rs  usage_stats_repo.rs
cc-panes-core/src/services/: claude_session_service.rs  codex_session_service.rs  daemon_client.rs  default_skill_service.rs  file_search_index.rs  filesystem_service.rs  git_service.rs  history_scanner.rs  history_service.rs  history_watch_manager.rs  hooks_service.rs  journal_service.rs  launch_history_service.rs  launch_profile_service.rs  mcp_config_service.rs  memory_service.rs  mod.rs  plan_service.rs  port_scanner.rs  process_monitor_service.rs  project_cli_hooks_service.rs  project_context_service.rs  project_service.rs  provider_service.rs  runner_service.rs  session_restore_service.rs  session_state_machine.rs  settings_service.rs  shared_mcp_service.rs  skill_service.rs  spec_service.rs  ssh_credential_service.rs  ssh_machine_service.rs  task_binding_service.rs  terminal_backend.rs  terminal_service.rs  todo_service.rs  uninstall_cleanup_service.rs  usage_stats_service.rs  user_environment_service.rs  (+4 more)
cc-panes-core/src/utils/: app_paths.rs  command.rs  error.rs  error_codes.rs  git_command.rs  host_path.rs  launch_request.rs  mod.rs  orchestrator_manifest.rs  path_normalize.rs  path_validator.rs  project_identity.rs  text_encoding.rs
cc-panes-core/tests/: git_service_c1.rs  git_service_c2.rs
cc-panes-daemon/: Cargo.toml
cc-panes-daemon/src/: main.rs  server.rs  ws_emitter.rs
cc-panes-tui/: Cargo.toml
cc-panes-tui/src/: app.rs  git.rs  ipc.rs  journal.rs  main.rs  pty.rs  session.rs  terminal.rs  ui.rs  utils.rs  workspace.rs
cc-panes-tui/src/models/: action.rs  event.rs  mod.rs
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/D/workspace/: CLAUDE.md
src-tauri/bundled-claude-config/: CLAUDE.md
src-tauri/bundled-claude-config/default-skills/: dispatch-todos.md  fork-session.md  launch-task.md  manifest.json  parallel-run.md  spec.md  workspace.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/resources/ccchan/: pets-manifest.json
src-tauri/resources/claude-bundle/: CLAUDE.md
src-tauri/src/: constants.rs  emitter.rs  lib.rs  main.rs
src-tauri/src/commands/: ccchan_commands.rs  claude_commands.rs  clipboard_commands.rs  filesystem_commands.rs  git_commands.rs  history_commands.rs  hooks_commands.rs  import_commands.rs  journal_commands.rs  launch_profile_commands.rs  local_history_commands.rs  mcp_config_commands.rs  memory_commands.rs  mod.rs  notification_commands.rs  orchestrator_commands.rs  plan_commands.rs  process_commands.rs  project_commands.rs  project_hooks_commands.rs  provider_commands.rs  push_commands.rs  runner_commands.rs  screenshot_commands.rs  session_restore_commands.rs  settings_commands.rs  shared_mcp_commands.rs  skill_commands.rs  spec_commands.rs  (+13 more)
src-tauri/tests/: history_integration_test.rs  project_integration_test.rs  start_runner_integration.rs  workspace_integration_test.rs  workspace_migration_integration_test.rs
(+976 files in other folders)
