[package]
name = "cc-panes-api"
version = "0.9.16"
description = "CC-Panes HTTP/WebSocket API adapter - framework-independent"
authors = ["wuxiran"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
cc-panes-core = { path = "../cc-panes-core" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
