[package]
name = "cc-panes-daemon"
version = "0.1.0"
description = "CC-Panes local terminal daemon"
authors = ["wuxiran"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
