[package]
name = "cc-panes-tui"
version = "0.1.0"
description = "CC-Panes TUI - 工作空间级别的 Claude 启动器"
authors = ["you"]
edition = "2021"

[[bin]]
name = "cc-panes-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["sync"] }

# PTY
portable-pty = "0.8"

# Terminal emulator (ANSI parsing)
vt100 = "0.15"
