[package]
name = "cc-panes"
version = "0.1.0"
description = "CC-Panes - Claude Code 多实例分屏管理"
authors = ["you"]
edition = "2021"

[lib]
name = "cc_panes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
notify = "7"
sha2 = "0.10"
walkdir = "2"
toml = "0.8"
urlencoding = "2"
similar = "2"
flate2 = "1"
encoding_rs = "0.8"
